--- a/media-styles.css
+++ b/media-styles.css
@@ -11,6 +11,7 @@
         --navigation-padding-horizontal: 16px;
         --navigation-padding-vertical: 12px;
         --h1-font-size: 48px;
+        --h2-font-size: 36px;
         --h6-font-size: 32px;
         --accent-button-font-size: 24px;
     }
@@ -84,7 +85,7 @@
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 820px) {
     body {
         --content-max-width: 600px;
         --icon-gap: 8px;
@@ -124,6 +125,7 @@
 
 @media (max-width: 700px) {
     body {
+        --content-gap: 80px;
         --icon-gap: 8px;
         --icon-height: 32px;
         --icon-text-size: 24px;
@@ -133,6 +135,13 @@
 
     body > .body-wrapper {
         padding: 0px 48px;
+    }
+    
+    header.on-stick {
+        margin-left: -48px;
+        padding-left: 48px;
+        margin-right: -48px;
+        padding-right: 48px;
     }
 
     #hero-content > img {
