Ready to develop more and more

--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,23 @@ section.use-space-between {
 
 h1 {
     font-size: var(--h1-font-size);
-    font-weight: 600;
+    font-weight: 700;
     margin: 0px;
 }
-
+h2 {
+    font-size: var(--h2-font-size);
+    font-weight: 700;
+    margin: 0px;
+}
 h6 {
     font-size: var(--h6-font-size);
     font-weight: 500;
     margin: 0px;
+}
+p {
+    font-size: var(--p-font-size);
+    margin: 0px;
+    line-height: 1.3;
 }
 
 img {
@@ -71,7 +80,11 @@ img {
     height: 475.13px;
 }
 
+#home-section {
+    margin-top: calc(var(--content-gap) * -1);
+    padding-top: var(--content-gap);
+}
 #more-about-xellanix {
     text-align: center;
+    gap: 24px;
 }
-
