--- a/header-section.css
+++ b/header-section.css
@@ -1,9 +1,32 @@
+#header-stick-watcher {
+    margin-bottom: calc(var(--content-gap) * -1);
+    top: var(--content-gap);
+    position: absolute;
+}
+
 header {
     display: flex;
     flex-direction: row;
     align-self: stretch;
     flex: 1 1 0;
     padding: var(--navigation-root-padding-vertical) 0px;
+    position: sticky;
+    top: 0;
+    
+    background-color: var(--primary-background-color);
+    margin-left: calc(var(--navigation-root-padding-vertical) * -1.5);
+    padding-left: calc(var(--navigation-root-padding-vertical) * 1.5);
+    margin-right: calc(var(--navigation-root-padding-vertical) * -1.5);
+    padding-right: calc(var(--navigation-root-padding-vertical) * 1.5);
+    
+    border-radius: 0px 0px 16px 16px;
+    z-index: 100;
+}
+header.on-stick {
+    box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, .125);
+}
+header.hambar-opened {
+    border-radius: 0px;
 }
 
 .icon-landscape {
@@ -25,6 +48,50 @@ header {
 .hamburger-button {
     display: none;
 }
+.hamburger-button div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hamburger-button svg {
+    max-width: 24px;
+    max-height: 24px;
+}
 .hamburger-button .hambar path {
     fill: var(--text-color);
+}
+
+#smoke-layer {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    visibility: hidden;
+    transition: visibility, background-color, -webkit-backdrop-filter, backdrop-filter;
+    transition-duration: 150ms;
+    transition-timing-function: ease-out;
+}
+.hambar-opened ~ #smoke-layer {
+    visibility: visible;
+}
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    #smoke-layer {
+        background-color: rgba(0, 0, 0, 0);
+        -webkit-backdrop-filter: blur(0px);
+        backdrop-filter: blur(0px);
+    }
+    .hambar-opened ~ #smoke-layer {
+        background-color: rgba(0, 0, 0, .35);
+        -webkit-backdrop-filter: blur(8px);
+        backdrop-filter: blur(8px);
+    }
+}
+/* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
+@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+    #smoke-layer {
+        background-color: rgba(0, 0, 0, .5);
+    }
 }
