--- a/main-frame.css
+++ b/main-frame.css
@@ -39,7 +39,7 @@ html {
 
 body {
     --content-max-width: 1400px;
-    --content-gap: 160px;
+    --content-gap: clamp(80px, calc(100dvh * 0.168421053), 160px);
     --icon-gap: 16px;
     --icon-height: 48px;
     --icon-text-size: 36px;
@@ -50,7 +50,9 @@ body {
     --navigation-padding-horizontal: 16px;
     --navigation-padding-vertical: 12px;
     --h1-font-size: 48px;
+    --h2-font-size: 36px;
     --h6-font-size: 32px;
+    --p-font-size: 16px;
     --accent-button-font-size: 24px;
 
     --color-theme-duration: .333s;
@@ -78,4 +80,9 @@ body > .body-wrapper {
     flex: 1 1 0;
     flex-direction: column;
     gap: var(--content-gap);
+    margin-bottom: var(--navigation-root-padding-vertical);
+}
+
+.no-scroll {
+    overflow: hidden;
 }
