--- a/media-styles.css
+++ b/media-styles.css
@@ -13,6 +13,7 @@
         --h1-font-size: 48px;
         --h2-font-size: 36px;
         --h6-font-size: 32px;
+        --p-font-size: 24px;
         --accent-button-font-size: 24px;
     }
 }
@@ -23,7 +24,9 @@
         --navigation-text-size: 16px;
         
         --h1-font-size: 42px;
+        --h2-font-size: 32px;
         --h6-font-size: 28px;
+        --p-font-size: 20px;
         --accent-button-font-size: 20px;
     }
 
@@ -44,6 +47,7 @@
         --navigation-padding-vertical: 10px;
 
         --h1-font-size: 36px;
+        --h2-font-size: 28px;
         --h6-font-size: 24px;
         --accent-button-font-size: 16px;
     }
@@ -67,7 +71,9 @@
         --navigation-gap: 16px;
 
         --h1-font-size: 28px;
+        --h2-font-size: 22px;
         --h6-font-size: 20px;
+        --p-font-size: 16px;
     }
 
     #hero-content {
@@ -88,17 +94,49 @@
 @media (max-width: 820px) {
     body {
         --content-max-width: 600px;
+        --content-gap: clamp(40px, calc(100dvh * 0.168421053), 80px);
         --icon-gap: 8px;
         --icon-height: 36px;
         --icon-text-size: 28px;
         --navigation-gap: 12px;
-        --navigation-text-size: 14px;
-        --navigation-padding-horizontal: 12px;
-        --navigation-padding-vertical: 8px;
+        --navigation-text-size: 16px;
+        --navigation-padding-horizontal: 14px;
+        --navigation-padding-vertical: 14px;
     }
 
     nav {
         display: none;
+    }
+
+    .hambar-opened > nav {
+        display: initial;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        align-self: flex-start;
+        margin-left: calc(var(--navigation-root-padding-vertical) * -1.5);
+        width: 100%;
+        background-color: var(--ternary-background-color);
+        border-radius: 0px 0px 12px 12px;
+        gap: 0px;
+        overflow: auto;
+        max-height: calc(100dvh - calc(var(--navigation-root-padding-vertical) + 40px) - 64px);
+    }
+    .hambar-opened > nav a {
+        width: 100%;
+        border-radius: 12px;
+    }
+    .hambar-opened > nav a:hover {
+        background-color: var(--secondary-background-color);
+        box-shadow: initial;
+    }
+    .hambar-opened > nav > .nav-item-wrapper.active {
+        border-bottom: initial;
+        border-left: 3px solid var(--accent-color);
+        height: 60%;
+    }
+    .hambar-opened > nav > .nav-item-wrapper.active > a {
+        background-color: var(--secondary-background-color);
     }
 
     .hamburger-button {
@@ -142,6 +180,10 @@
         padding-left: 48px;
         margin-right: -48px;
         padding-right: 48px;
+    }
+
+    header.on-stick.hambar-opened > nav {
+        margin-left: -48px;
     }
 
     #hero-content > img {
