--- a/media-styles.css
+++ b/media-styles.css
@@ -12,9 +12,17 @@
         --navigation-padding-vertical: 12px;
         --h1-font-size: 48px;
         --h2-font-size: 36px;
+        --h3-font-size: 28px;
+        --h4-font-size: 24px;
         --h6-font-size: 32px;
         --p-font-size: 24px;
+        --section-gap-vertical: 24px;
+        --section-gap-horizontal: 64px;
         --accent-button-font-size: 24px;
+    }
+
+    .product-item {
+        width: 275px;
     }
 }
 
@@ -25,13 +33,21 @@
         
         --h1-font-size: 42px;
         --h2-font-size: 32px;
+        --h3-font-size: 24px;
+        --h4-font-size: 20px;
         --h6-font-size: 28px;
         --p-font-size: 20px;
+        --section-gap-vertical: 20px;
+        --section-gap-horizontal: 48px;
         --accent-button-font-size: 20px;
     }
 
     #hero-content + img {
         height: 427.617px;
+    }
+    
+    .product-item {
+        width: 225px;
     }
 }
 
@@ -48,6 +64,7 @@
 
         --h1-font-size: 36px;
         --h2-font-size: 28px;
+        --h3-font-size: 22px;
         --h6-font-size: 24px;
         --accent-button-font-size: 16px;
     }
@@ -72,8 +89,12 @@
 
         --h1-font-size: 28px;
         --h2-font-size: 22px;
+        --h3-font-size: 20px;
+        --h4-font-size: 16px;
         --h6-font-size: 20px;
         --p-font-size: 16px;
+        --section-gap-vertical: 12px;
+        --section-gap-horizontal: 36px;
     }
 
     #hero-content {
@@ -88,6 +109,16 @@
     #hero-content > .accent-button {
         padding: 16px 24px;
         border-radius: 12px;
+    }
+
+    .product-item {
+        width: 180px;
+        padding: 28px 14px;
+    }
+    .product-item > .accent-button {
+        padding: 14px 20px;
+        border-radius: 8px;
+        margin-top: 14px;
     }
 }
 
@@ -131,12 +162,26 @@
         box-shadow: initial;
     }
     .hambar-opened > nav > .nav-item-wrapper.active {
+        --navigation-padding-horizontal-active: calc(var(--navigation-padding-horizontal) * 1.5);
+
         border-bottom: initial;
-        border-left: 3px solid var(--accent-color);
         height: 60%;
+        
+        position: relative;
+        align-items: center;
+    }
+    .hambar-opened > nav > .nav-item-wrapper.active > .nav-item-indicator {
+        display: initial;
+        height: 50%;
+        margin-left: calc(calc(var(--navigation-padding-horizontal-active) - 3px) / 2);
+        width: 3px;
+        border-radius: 16px;
+        background-color: var(--accent-color);
+        position: absolute;
     }
     .hambar-opened > nav > .nav-item-wrapper.active > a {
         background-color: var(--secondary-background-color);
+        padding: var(--navigation-padding-vertical) var(--navigation-padding-horizontal-active);
     }
 
     .hamburger-button {
@@ -173,6 +218,18 @@
 
     body > .body-wrapper {
         padding: 0px 48px;
+    }
+
+    header {
+        margin-left: -48px;
+        padding-left: 48px;
+        margin-right: -48px;
+        padding-right: 48px;
+    }
+    header.hambar-opened > nav {
+        margin-left: -48px;
+        padding: 12px;
+        box-sizing: border-box;
     }
     
     header.on-stick {
