--- a/styles.css
+++ b/styles.css
@@ -158,3 +158,14 @@ img {
 #products-section > div.horizontal-layout{
     row-gap: var(--section-gap-horizontal)
 }
+#team-section p > br {
+    display: initial;
+    content: initial;
+    margin-top: initial;
+}
+#team-section > div{
+    margin-top: var(--section-gap-vertical);
+}
+#team-section > div.horizontal-layout {
+    row-gap: calc(var(--section-gap-horizontal) * 1.5);
+}
