--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,74 +1,3 @@
-main {
-    display: flex;
-    gap: var(--content-gap);
-    flex-direction: column;
-}
-
-section {
-    display: flex;
-}
-
-h1 {
-    font-size: var(--h1-font-size);
-    font-weight: 700;
-    margin: 0px;
-}
-h2 {
-    font-size: var(--h2-font-size);
-    font-weight: 700;
-    margin: 0px;
-}
-h3 {
-    font-size: var(--h3-font-size);
-    font-weight: 700;
-    margin: 0px;
-}
-h4 {
-    font-size: var(--h4-font-size);
-    font-weight: 700;
-    margin: 0px;
-}
-h6 {
-    font-size: var(--h6-font-size);
-    font-weight: 500;
-    margin: 0px;
-}
-p {
-    font-size: var(--p-font-size);
-    margin: 0px;
-    line-height: 1.3;
-}
-p > br {
-    display: block;
-    content: "";
-    margin-top: 0.5em;
-}
-
-img {
-    object-fit: contain;
-}
-
-.accent-button {
-    display: flex;
-    align-self: flex-start;
-    background-color: var(--accent-color);
-    color: #E6E6E6;
-    border-radius: 16px;
-    font-size: var(--accent-button-font-size);
-    font-weight: 600;
-
-    transition: background-color 87ms ease-out;
-}
-.accent-button:hover {
-    background-color: var(--accent-color-hover);
-    box-shadow: 0px 0px 42px 0px rgba(0, 0, 0, .09);
-}
-.accent-button > a {
-    color: #E6E6E6;
-    text-decoration: none !important;
-    padding: 20px 28px;
-}
-
 .product-item {
     display: flex;
     flex-direction: column;
@@ -85,14 +14,11 @@ img {
 .product-item:hover {
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 15%);
 }
-.product-item > .accent-button {
+.product-item > .button.accent {
     align-self: center;
     font-size: calc(var(--accent-button-font-size) * 5 / 6);
     border-radius: 12px;
     margin-top: 16px;
-}
-.product-item > .accent-button > a {
-    padding: 16px 24px;
 }
 
 .team-member-item {
