--- a/styles/main-frame.css
+++ b/styles/main-frame.css
@@ -1,24 +1,24 @@
 html {
 	scroll-behavior: smooth;
 	overflow-x: clip;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .light-theme {
-	--primary-background-color: #F7F7F7;
+	--primary-background-color: #f7f7f7;
 
-	--secondary-background-color: #F7F7F7;
-	--secondary-background-color2: #FFFFFF;
+	--secondary-background-color: #f7f7f7;
+	--secondary-background-color2: #ffffff;
 
-	--ternary-background-color: #E9E9E9;
-	--ternary-background-color2: #D6D6D6;
+	--ternary-background-color: #e9e9e9;
+	--ternary-background-color2: #d6d6d6;
 
 	--text-color: #303030;
-	--accent-button-text-color: #E6E6E6;
+	--accent-button-text-color: #e6e6e6;
 
-	--accent-color: #1973C1;
+	--accent-color: #1973c1;
 	--accent-color-hover: #268de8;
 	--accent-color-active: #0162b7;
 
@@ -28,24 +28,24 @@ html {
 	--warning-background-color: rgba(232, 162, 30, 0.15);
 	--success-color: #59a310;
 	--success-background-color: rgba(89, 163, 16, 0.15);
-    --information-color: var(--accent-color);
-    --information-background-color: rgba(25, 115, 193, 0.15);
+	--information-color: var(--accent-color);
+	--information-background-color: rgba(25, 115, 193, 0.15);
 
 	color-scheme: light;
 }
 .dark-theme {
 	--primary-background-color: #212121;
 
-	--secondary-background-color: #3B3B3B;
-	--secondary-background-color2: #3B3B3B;
+	--secondary-background-color: #3b3b3b;
+	--secondary-background-color2: #3b3b3b;
 
 	--ternary-background-color: #333333;
 	--ternary-background-color2: #292929;
 
-	--text-color: #E6E6E6;
+	--text-color: #e6e6e6;
 	--accent-button-text-color: #303030;
 
-	--accent-color: #4DC3FF;
+	--accent-color: #4dc3ff;
 	--accent-color-hover: #76d1ff;
 	--accent-color-active: #35aae5;
 
@@ -55,8 +55,8 @@ html {
 	--warning-background-color: rgba(232, 162, 30, 0.15);
 	--success-color: #7ad123;
 	--success-background-color: rgba(122, 209, 35, 0.15);
-    --information-color: var(--accent-color);
-    --information-background-color: rgba(77, 195, 255, 0.15);
+	--information-color: var(--accent-color);
+	--information-background-color: rgba(77, 195, 255, 0.15);
 
 	color-scheme: dark;
 }
@@ -184,27 +184,77 @@ label {
 	user-select: none;
 }
 
-input {
+input[type="file"]::-ms-browse,
+input[type="file" i]::-webkit-file-upload-button {
+	font: inherit;
+
+	border-radius: calc(var(--button-border-radius) * 3 / 5);
+	font-weight: 600;
+	text-align: center;
+	gap: 8px;
+	background-color: transparent;
+	border: 2px solid var(--accent-color);
+	margin-inline-end: 12px;
+	padding: calc(var(--button-padding-vertical) * 3 / 5)
+		calc(var(--button-padding-horizontal) * 3 / 5);
+	cursor: pointer;
+	color: inherit;
+
+	transition: background-color 87ms ease-out, border-color 87ms ease-out;
+}
+input[type="file"]::-ms-browse:hover,
+input[type="file" i]::-webkit-file-upload-button:hover {
+	background-color: var(--information-background-color);
+	border-color: transparent;
+}
+
+input[type="file"]::file-selector-button {
+	font: inherit;
+
+	border-radius: calc(var(--button-border-radius) * 3 / 5);
+	font-weight: 600;
+	text-align: center;
+	gap: 8px;
+	background-color: transparent;
+	border: 2px solid var(--accent-color);
+	margin-inline-end: 12px;
+	padding: calc(var(--button-padding-vertical) * 3 / 5)
+		calc(var(--button-padding-horizontal) * 3 / 5);
+	cursor: pointer;
+	color: inherit;
+
+	transition: background-color 87ms ease-out, border-color 87ms ease-out;
+}
+input[type="file"]::file-selector-button:hover {
+	background-color: var(--information-background-color);
+	border-color: transparent;
+}
+
+input,
+textarea {
 	font: inherit;
 	color: inherit;
 }
-input[type="email"],
-input[type="password"],
-input[type="text"] {
+input[type],
+textarea {
 	padding: 16px;
 	border: 2px solid var(--ternary-background-color2);
 	border-radius: var(--button-border-radius);
 	background-color: var(--primary-background-color);
+	resize: none;
 }
-input[type="email"] ~ span,
-input[type="password"] ~ span,
-input[type="text"] ~ span {
+input[type] ~ span,
+textarea ~ span {
 	display: none;
 }
-input[type="email"]:invalid ~ span,
-input[type="password"]:invalid ~ span,
-input[type="text"]:invalid ~ span {
+input[type]:invalid ~ span,
+textarea:invalid ~ span {
 	display: initial;
+}
+
+input[type] ~ span.hidden,
+textarea ~ span.hidden {
+	display: none;
 }
 
 .no-scroll {
@@ -224,8 +274,7 @@ input[type="text"]:invalid ~ span {
 
 	display: flex;
 
-	transition: visibility, background-color, -webkit-backdrop-filter,
-		backdrop-filter;
+	transition: visibility, background-color, -webkit-backdrop-filter, backdrop-filter;
 	transition-duration: 150ms;
 	transition-timing-function: ease-out;
 }
