--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,9 @@
 .product-item:hover {
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 15%);
 }
+.product-item > p {
+    white-space: pre-wrap;
+}
 .product-item > .button.accent {
     align-self: center;
     font-size: calc(var(--accent-button-font-size) * 5 / 6);
@@ -33,6 +36,7 @@
     height: 300px;
     border-radius: 16px;
     box-shadow: 0px 4px 50px 0px rgba(0, 0, 0, 15%);
+    object-fit: cover;
 }
 .team-member-item > div {
     gap: 8px;
