--- a/styles/popup.css
+++ b/styles/popup.css
@@ -2,6 +2,7 @@
 	--popup-padding: 24px;
 
 	min-width: clamp(350px, 40dvw, 100%);
+	max-width: calc(100dvw - 64px);
 	max-height: 85dvh;
 	background-color: var(--secondary-background-color);
 	border-radius: 16px;
