--- a/styles/main-frame.css
+++ b/styles/main-frame.css
@@ -18,9 +18,9 @@ html {
 	--text-color: #303030;
 	--accent-button-text-color: #e6e6e6;
 
-	--accent-color: #1973c1;
-	--accent-color-hover: #268de8;
-	--accent-color-active: #0162b7;
+	--accent-color: #0f65af;
+	--accent-color-hover: #1a7ed6;
+	--accent-color-active: #0058a5;
 
 	--error-color: #e81e1e;
 	--error-color-hover: #ff2a2a;
